--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background: rgb(40, 111, 72);
+    background: rgb(69, 101, 133);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -7,14 +7,31 @@ body{
     display: flex;
     padding:10px;
     margin: 10px;
-    background: rgb(241, 171, 219);
+    background: #c5bebe;
+    border-radius: 10px;
 }
 
 .Assignments img {
     width: 200px;
-    padding: 10px;
+    border: 2px solid white;
+    margin: 20px 
+
 }
+
+.Assingment img:hover {
+    border: 2px solid #085671;
+}
+   
 h1{
-    color: rgb(255, 145, 222);
+    color: #fffceb;
     text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: #fffceb;
+}
+
+a:hover{
+    color:#085671;
 }
