--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,16 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.assignmet{
+    display:flex;
+    flex-wrap: wrap;
+}
+
 .Assignments{
-    display: flex;
+    width:30%;
     padding:10px;
     margin: 10px;
+    padding: 20px 10px;
     background: #c5bebe;
     border-radius: 10px;
 }
@@ -14,8 +20,9 @@ body{
 .Assignments img {
     width: 200px;
     border: 2px solid white;
+    display:block;
+    margin:center;
     margin: 20px 
-
 }
 
 .Assingment img:hover {
@@ -24,6 +31,10 @@ body{
    
 h1{
     color: #fffceb;
+    text-align: center;
+}
+
+h2{
     text-align: center;
 }
 
